modification du fichier html en ajoutant un triangle en face de et un s à la fin de OpenClassroom

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
     
     <body>
-        <h1>Open Classroom</h1>
+        <h1>♦Open Classrooms</h1>
         <h1>&nbsp;#Gérer son code avec Git & GitHub - Partie 2 Activité</h1>
         
         <h2>&nbsp;&nbsp;&nbsp;Partager un repository sur GitHub !</h2>        
